--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "18.1.0",
     "react-native": "0.70.4",
     "react-native-geolocation-service": "^5.3.1",
+    "react-native-maps": "^1.3.2",
     "react-native-vector-icons": "^9.2.0",
     "styled-components": "^5.3.6"
   },
