--- a/package.json
+++ b/package.json
@@ -10,16 +10,23 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/bottom-tabs": "^6.4.0",
-    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native": "^6.0.16",
+    "@react-navigation/stack": "^6.3.7",
+    "@reduxjs/toolkit": "^1.9.1",
+    "native-base": "^3.4.23",
     "react": "18.1.0",
     "react-hook-form": "^7.39.1",
     "react-native": "0.70.5",
     "react-native-geolocation-service": "^5.3.1",
+    "react-native-gesture-handler": "^2.8.0",
     "react-native-maps": "^1.3.2",
-    "react-native-safe-area-context": "^4.4.1",
+    "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.5",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
@@ -28,6 +35,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
+    "@types/node": "^18.11.10",
     "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.6",
     "@types/react-native-vector-icons": "^6.4.12",
