--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.2",
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/datetimepicker": "^6.7.1",
+    "@react-native-firebase/app": "^16.5.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.16",
     "@react-navigation/stack": "^6.3.7",
     "@reduxjs/toolkit": "^1.9.1",
+    "@types/uuid": "^9.0.0",
+    "graphql": "^16.6.0",
     "native-base": "^3.4.23",
     "react": "18.1.0",
     "react-hook-form": "^7.39.1",
@@ -24,10 +29,13 @@
     "react-native-maps": "^1.3.2",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-select-dropdown": "^3.1.0",
     "react-native-svg": "^12.1.1",
+    "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
